core/src/main/java/com/example/core/domain/model/error/SaleError.kt
package com.example.core.domain.model.error

sealed class SaleError : AppError(){
    object ThereAreFewerMaterialsInStock : SaleError()
}

